--- a/src/app/users/users.component.html
+++ b/src/app/users/users.component.html
@@ -1,3 +1,15 @@
 <ul>
     <li *ngFor="let user of users">{{ user.name }}</li>
 </ul>
+<table> 
+    <thead>
+        <th>Nombre</th>
+        <th>Color</th>
+    </thead>
+    <tbody>
+        <tr *ngFor="let user of users" >
+            <td>{{ user.name}} </td>
+            <td>{{ user.color}} </td>
+        </tr>
+    </tbody>
+</table>
