se agregaron componentes admin

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,2 +1,5 @@
 <h1> BIENVENIDO A LA PAGINA DE RESERVACION</h1>
 <p> RESTAURANTE EL CABRITO</p>
+<app-reservas></app-reservas>
+<app-admin></app-admin>
+<a routerLink="/admin">Panel de administración</a>
